--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,11 @@ a {
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system-body BlinkMacSystemFont, Segoe UI, Roboto, Barlow Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Barlow, sans-serif;
 }
+
+/* font-family: -apple-system-body BlinkMacSystemFont, Segoe UI, Roboto, Barlow Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+
 
 @layer base {
 
